src/test/resources/typeSystemTestModels/invalid/fieldsAndLocalVars/GrandBox.java
package typeSystemTestModels.invalid.fieldsAndLocalVars;

public class GrandBox<T> extends Box<Integer> {

  public GrandBox(){

  }
}